# 2025MasterPython

./: 2024103442杨海杰  README.md  assignment_03.py  predict_linear.py  readme.md  作业2.doc  作业3.doc  作业一  结课作业.doc  结课作业.txt
2023103360邵明月/: 作业1  作业2  作业3
2023103416王瑞豪/: hw1.py  hw2.py  hw3.py
2024103382艾原旭/: homework1.py  homework2.py  homework3.py  homework4.py  项目说明文档.docx
2024103385卞豪杰/: assignment_01.py  assignment_02.py
2024103387车好/: Readme.md
2024103388陈杰/: ClassWork_3.py  DiskClean.py  技术文档.docx
2024103389 陈思雨/: 第一次作业.py  第三次作业.py  第二次作业.py
2024103390郭久裕/: 作业1  作业2  作业3
2024103392何易松/: 作业1.py  作业2.py  作业3.py  结课项目  结课项目.py  项目说明
2024103393霍禹同/: final_task.py  final_task_description.md  task01.py  task02.py  task03.py
2024103394金子尧/: work1.py  work2.py  work3.py  基于可开发性属性指导的抗体序列与结构协同设计扩散模型.docx
2024103395 阚旭辉/: task01.py  task02.py  task03.py
2024103396来毅超/: T1.py  T2.py  T3.py
2024103397梁钊/: 1.py  2.py  3.py
2024103398连易铭/: README
2024103399李博宁/: 1.py  2.py  3.py
2024103400李超/: 1_tuple_list_test.py
2024103401李闯/: Assignment_01.py  Assignment_02.py  Assignment_03.py  Final_Assignment.py  README_Final_Assignment.md
2024103402李佳欣/: 2024103402李佳欣_作业1.py  2024103402李佳欣_作业2.py  2024103402李佳欣_作业3.py
2024103403 刘斌/: 作业一  作业三  作业二
2024103404刘春秀/: task_1.py  task_2.py  task_3.py
2024103405柳建壕/: 1.py  2.py  3.py  结课项目
2024103408刘星池/: 作业1  (+2 more)
2024103410刘序桐/项目/C++代码/: CMakeLists.txt  CMakePresets.json  hierarchicalClustering.cpp  hierarchicalClustering.h  main.cpp  maxHeap.cpp  maxHeap.h  redBlackTree.cpp  redBlackTree.h  vns.cpp  vns.h
(+928 files in other folders)
